# payslip-parser

./: .gitignore  1.22.3  Dockerfile  README.md  config.yaml  deployment.yaml  main.py  mkdocs.yml  nginx-default.conf  pyproject.toml  requirements.txt  route.yaml  setup.py  tlush_parser.py
business_logic/: payslip.py  payslip_directory_parser.py  payslip_parser.py  text_block.py
configuration/: config.py  loader.py
docs/: another_tab.md
idf/: config.yaml  idf_payslip_parser.py  idf_payslips_parser.py  idf_text_block.py
k8s/: default.conf  service.yaml
parser/payslip_directory_parser/: payslip_directory_parser.py
parser/payslip_parser/: idf_payslip_parser.py  payslip_parser.py
parser/text_block/: idf_text_block.py
payslip_parser/: __init__.py
payslip_parser/configuration/: __init__.py  config.py  idf_payslip_config.yaml  loader.py
payslip_parser/parsers/: __init__.py  base_payslip_parser.py  idf_payslip_parser.py  payslip_directory_parser.py
payslip_parser/payslips/: __init__.py  payslip.py
payslip_parser/text_blocks/: __init__.py  base_text_block.py  idf_text_block.py
tests/: conftest.py
tests/test_parsers/: test_idf_payslip_parser.py
