[tool.poetry]
name = "payslip-parser"
version = "0.1.4"
description = "Parse your payslips from PDFs to pandas dataframes."
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = ">=1.22.3"
pandas = "*"
pathlib = "*"
yaml = "*"
pyyaml = "*"
pydantic = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
